// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          class="sc-fzozJi cRYAlc   "
          data-testid="select-list__toggle-button"
          id="downshift-0-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-0-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-0-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-2-label downshift-2-toggle-button"
          class="sc-fzozJi cRYAlc   "
          data-testid="select-list__toggle-button"
          disabled=""
          id="downshift-2-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-2-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-2-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      aria-invalid="true"
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label downshift-1-toggle-button"
          class="sc-fzozJi cRYAlc   is-invalid"
          data-testid="select-list__toggle-button"
          id="downshift-1-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-1-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-1-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-5-label downshift-5-toggle-button"
          class="sc-fzozJi cRYAlc   "
          data-testid="select-list__toggle-button"
          id="downshift-5-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-5-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-5-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value="3"
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-3-label downshift-3-toggle-button"
          class="sc-fzozJi cRYAlc  is-selected "
          data-testid="select-list__toggle-button"
          id="downshift-3-toggle-button"
          type="button"
        >
          Option 3
        </button>
        <ul
          aria-labelledby="downshift-3-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-3-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-6-label downshift-6-toggle-button"
          class="sc-fzozJi cRYAlc   "
          data-testid="select-list__toggle-button"
          id="downshift-6-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-6-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-6-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ jwsVRX overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-4-label downshift-4-toggle-button"
          class="sc-fzozJi cRYAlc   "
          data-testid="select-list__toggle-button"
          id="downshift-4-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-4-label"
          class="sc-fzoLsD jhmsZA"
          id="downshift-4-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy KqhRN w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm dKDmBo"
          height="8"
          width="8"
        >
          <svg>
            arrowdown.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
